--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="css.css" >
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	 <script src="CV.js"></script>
 	</head>
 	<body>
 	<h2>Ingénieur : Informatique & Mécanique<h2>
 	
-    <h1>CONTACT</h1>
+    <h1>CONTACT <button style="font-size: 50%;" onclick="afficher('#contact');">cacher</button></h1>
 	<div id="contact"> 
     <p>
     BARKAOUI Moufida<br>
@@ -18,7 +19,7 @@
     Num :+33 (0)6 41 17 53 31
 	</p>
     </div> 
-    <h1>Formations</h1>
+    <h1>Formations <button style="font-size: 50%;" onclick="afficher('#formation');">cacher</button></h1>
 	<div id="formation"> 
     <p>
       2016-2017:Master 2 Competences Complementaires en Informatique<br>
@@ -42,7 +43,7 @@
 	  </p>
       </div>
       
-    <h1>Experiences Professionnelles <button style="font-size: 50%;">cacher</button> </h1>
+    <h1>Experiences Professionnelles <button style="font-size: 50%;" onclick="afficher('#experience');">cacher</button> </h1>
     <div id="experience"> 
     <p>
 	  2016 (6mois) Stage Master 2 :Laboratoire Ondes et Milieux Complexes (UMR CNRS 6294 /ULH) le Havre, France<br>
@@ -57,9 +58,9 @@
       </p> 
     </div>
 	
-	 <h1>Compétences</h1>
+	 <h1>Compétences <button style="font-size: 50%;" onclick="afficher('#competence');">cacher</button></h1>
 	  <div id="competence"> 
-        <h1>Compétences Informatiques</h1>
+        <h1>Compétences Informatiques <button style="font-size: 50%;" onclick="afficher('#competenceinfo');">cacher</button></h1>
 		<div id="competenceinfo"> 
       <p>
       Bases de Données: SQL Server, Oracle, MySQL <br>
@@ -73,7 +74,7 @@
       </p>
 	  </div>
 	  
-      <h1>Compétences Mécaniques</h1>
+      <h1>Compétences Mécaniques <button style="font-size: 50%;" onclick="afficher('#competencemeca');">cacher</button></h1>
 	    <div id="competencemeca"> 
       <p>
 		<td>Informatique Industrielle:</td><br>
@@ -87,7 +88,7 @@
 	</p>
 	 </div>
      
-    <h1>Linguistiques</h1>
+    <h1>Linguistiques <button style="font-size: 50%;" onclick="afficher('#competencling');">cacher</button></h1>
 	 <div id="competencling"> 
     <p>
       Français : Technique<br>
