--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
     Num :+33 (0)6 41 17 53 31
 	</p>
     </div> 
+	<form>
+  <p>
+        <label>Nom</label> : <input type="text" name="nom" />
+  </p>
+  <p>
+        <label>Mail</label> : <input type="text" name="mail" />
+  </p>
+ 
+ <p>
+       <label>Téléphone</label> : <input type="text" name="telephone" />
+  </p>
+  <p>
+       <label>Message</label> : <input type="text" name="Message" />
+  </p>
+  </form>
     <h1>Formations <button style="font-size: 50%;" onclick="afficher('#formation');">cacher</button></h1>
 	<div id="formation"> 
     <p>
